--- a/.github/workflows/cypress-pr-action.yml
+++ b/.github/workflows/cypress-pr-action.yml
@@ -3,7 +3,8 @@ name: Run Cypress Component Tests
 on:
   pull_request:
     branches:
-      - develop
+      - develop  
+  workflow_dispatch:
 
 jobs:
   cypress-tests:
@@ -16,10 +17,9 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-
+          node-version: '14' 
       - name: Install dependencies
         run: npm install
 
       - name: Run Cypress component tests
-        run: npm run test-component
+        run: npm run test-component  
